wav2vec2/code/test_python2_venv_example/outputs/test_output1.txt
Thu May 25 19:09:28 AEST 2023
  File "python2-venv-example.py", line 29
    print "\n"
             ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print("\n")?
Thu May 25 20:57:19 AEST 2023
  File "python2-venv-example.py", line 31
    print "Test script executed on", datetime.today().strftime('%Y-%m-%d-%H:%M:%S')
                                  ^
SyntaxError: invalid syntax
Thu May 25 21:02:54 AEST 2023

------------ Importing libraries... ------------

Traceback (most recent call last):
  File "python2-venv-example.py", line 9, in <module>
    import pandas as pd
  File "/srv/scratch/z5313567/thesis/thesis_env/lib64/python3.6/site-packages/pandas/__init__.py", line 17, in <module>
    "Unable to import required dependencies:\n" + "\n".join(missing_dependencies)
ImportError: Unable to import required dependencies:
numpy: No module named 'numpy'
Fri May 26 01:34:37 AEST 2023

------------ Importing libraries... ------------

Importing sys
3.6.8 (default, Nov  8 2022, 11:32:15) 
[GCC 8.5.0 20210514 (Red Hat 8.5.0-15)]
Importing datetime
Importing math
Importing platform
Importing panda
Traceback (most recent call last):
  File "python2-venv-example.py", line 16, in <module>
    import pandas as pd
  File "/srv/scratch/z5313567/thesis/thesis_env/lib64/python3.6/site-packages/pandas/__init__.py", line 17, in <module>
    "Unable to import required dependencies:\n" + "\n".join(missing_dependencies)
ImportError: Unable to import required dependencies:
numpy: No module named 'numpy'
Fri May 26 01:37:41 AEST 2023

------------ Importing libraries... ------------

Importing sys
3.6.8 (default, Nov  8 2022, 11:32:15) 
[GCC 8.5.0 20210514 (Red Hat 8.5.0-15)]
Importing datetime
Importing math
Importing platform
Importing numpy
Traceback (most recent call last):
  File "python2-venv-example.py", line 16, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
Fri May 26 01:53:05 AEST 2023
  File "python2-venv-example.py", line 3
    pip install datasets
              ^
SyntaxError: invalid syntax
Fri May 26 02:39:39 AEST 2023
  File "/srv/scratch/z5313567/thesis/Code/test_python2_venv_example/python2-venv-example.py", line 3
    pip install datasets
        ^^^^^^^
SyntaxError: invalid syntax
Fri May 26 02:50:24 AEST 2023

------------ Importing libraries... ------------

Importing sys
3.10.8 (main, Dec  5 2022, 10:38:26) [GCC 12.2.0]


Importing datetime
Importing math
Importing platform
Importing numpy
Importing panda
Traceback (most recent call last):
  File "/srv/scratch/z5313567/thesis/Code/test_python2_venv_example/python2-venv-example.py", line 19, in <module>
    import pandas as pd
  File "/home/z5313567/.local/lib/python3.10/site-packages/pandas/__init__.py", line 16, in <module>
    raise ImportError(
ImportError: Unable to import required dependencies:
dateutil: No module named 'dateutil'
Fri May 26 16:52:15 AEST 2023

------------ Importing libraries... ------------

Importing sys
3.6.8 (default, Feb 21 2023, 16:57:46) 
[GCC 8.5.0 20210514 (Red Hat 8.5.0-16)]


Importing datetime
Importing math
Importing platform
Importing numpy
Importing panda
Importing random
Importing json
Importing librosa
Traceback (most recent call last):
  File "python2-venv-example.py", line 25, in <module>
    import librosa
ModuleNotFoundError: No module named 'librosa'
Fri May 26 17:29:09 AEST 2023
/srv/scratch/z5313567/thesis/thesis_env/lib64/python3.6/site-packages/requests/__init__.py:104: RequestsDependencyWarning: urllib3 (1.26.16) or chardet (5.0.0)/charset_normalizer (2.0.12) doesn't match a supported version!
  RequestsDependencyWarning)

------------ Importing libraries... ------------

Importing sys
3.6.8 (default, Nov  8 2022, 11:32:15) 
[GCC 8.5.0 20210514 (Red Hat 8.5.0-15)]


Importing datetime
Importing math
Importing platform
Importing numpy
Importing panda
Importing random
Importing json
Importing librosa
Importing torch
Importing transformers
Traceback (most recent call last):
  File "/srv/scratch/z5313567/thesis/thesis_env/lib64/python3.6/site-packages/transformers/utils/import_utils.py", line 857, in _get_module
    return importlib.import_module("." + module_name, self.__name__)
  File "/usr/lib64/python3.6/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 994, in _gcd_import
  File "<frozen importlib._bootstrap>", line 971, in _find_and_load
  File "<frozen importlib._bootstrap>", line 955, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 665, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 678, in exec_module
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/srv/scratch/z5313567/thesis/thesis_env/lib64/python3.6/site-packages/transformers/trainer.py", line 158, in <module>
    import datasets
  File "/srv/scratch/z5313567/thesis/thesis_env/lib64/python3.6/site-packages/datasets/__init__.py", line 37, in <module>
    from .arrow_dataset import Dataset
  File "/srv/scratch/z5313567/thesis/thesis_env/lib64/python3.6/site-packages/datasets/arrow_dataset.py", line 61, in <module>
    from .arrow_reader import ArrowReader
  File "/srv/scratch/z5313567/thesis/thesis_env/lib64/python3.6/site-packages/datasets/arrow_reader.py", line 29, in <module>
    from .download.download_config import DownloadConfig
  File "/srv/scratch/z5313567/thesis/thesis_env/lib64/python3.6/site-packages/datasets/download/__init__.py", line 10, in <module>
    from .streaming_download_manager import StreamingDownloadManager
  File "/srv/scratch/z5313567/thesis/thesis_env/lib64/python3.6/site-packages/datasets/download/streaming_download_manager.py", line 17, in <module>
    from aiohttp.client_exceptions import ClientError
  File "/srv/scratch/z5313567/thesis/thesis_env/lib64/python3.6/site-packages/aiohttp/__init__.py", line 6, in <module>
    from .client import *  # noqa
  File "/srv/scratch/z5313567/thesis/thesis_env/lib64/python3.6/site-packages/aiohttp/client.py", line 15, in <module>
    from . import connector as connector_mod
  File "/srv/scratch/z5313567/thesis/thesis_env/lib64/python3.6/site-packages/aiohttp/connector.py", line 12, in <module>
    from . import hdrs, helpers
  File "/srv/scratch/z5313567/thesis/thesis_env/lib64/python3.6/site-packages/aiohttp/helpers.py", line 737, in <module>
    class CeilTimeout(Timeout):
TypeError: function() argument 1 must be code, not str

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "python2-venv-example.py", line 36, in <module>
    from transformers import Trainer
  File "<frozen importlib._bootstrap>", line 1020, in _handle_fromlist
  File "/srv/scratch/z5313567/thesis/thesis_env/lib64/python3.6/site-packages/transformers/utils/import_utils.py", line 847, in __getattr__
    module = self._get_module(self._class_to_module[name])
  File "/srv/scratch/z5313567/thesis/thesis_env/lib64/python3.6/site-packages/transformers/utils/import_utils.py", line 861, in _get_module
    ) from e
RuntimeError: Failed to import transformers.trainer because of the following error (look up to see its traceback):
function() argument 1 must be code, not str
Sat May 27 03:23:42 AEST 2023
  File "python2-venv-example.py", line 13
    print('Importing platfo
                          ^
SyntaxError: EOL while scanning string literal
Sat May 27 03:31:54 AEST 2023

------------ Importing libraries... ------------

Importing sys
3.7.0 (default, Jun 28 2018, 13:15:42) 
[GCC 7.2.0]


Importing datetime
Importing math
Importing platfom
Importing numpy
Importing panda
Importing random
Importing json
Importing librosa
Traceback (most recent call last):
  File "python2-venv-example.py", line 25, in <module>
    import librosa
ModuleNotFoundError: No module named 'librosa'
Sat May 27 03:37:21 AEST 2023

------------ Importing libraries... ------------

Importing sys
3.7.0 (default, Jun 28 2018, 13:15:42) 
[GCC 7.2.0]


Importing datetime
Importing math
Importing platfom
Importing numpy
Importing panda
Importing random
Importing json
Importing librosa
Traceback (most recent call last):
  File "python2-venv-example.py", line 25, in <module>
    import librosa
ModuleNotFoundError: No module named 'librosa'
Sat May 27 03:46:22 AEST 2023

------------ Importing libraries... ------------

Importing sys
3.10.4 (main, Mar 31 2022, 08:41:55) [GCC 7.5.0]


Importing datetime
Importing math
Importing platfom
Importing numpy
Importing panda
Importing random
Importing json
Importing librosa
Importing torch
Importing transformers
Importing Wav2Vec2CTCTokenizer
Importing Wav2Vec2FeatureExtractor
Importing Wav2Vec2Processor
Importing Wav2Vec2ForCTC
Importing TrainingArguments
Importing Trainer
Importing transformers
Importing datasets
Importing dataclasses
Importing typing

------------ Successfully imported libraries... ------------



Test script executed on 2023-05-27-03:46:28


The square root of 42 is 6.48074069840786


2023-05-27 03:46:28.353205


Python 2 is deprecated and you should avoid if possible. This is python version 3.10.4


Transformers Version: 4.29.2
Numpy Version: 1.23.1
Test cuda_device_count 0
Test cuda_is_available False
Runtime error: Found no NVIDIA driver on your system
